# Metody-numeryczne

./: .gitignore  CMakeLists.txt  chart_tests.py  how_build_run.txt  test.txt
build - Copy/: CMakeCache.txt  Makefile  cmake_install.cmake
build - Copy/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build - Copy/met_numeryczne_autogen/: deps  moc_predefs.h
build - Copy/met_numeryczne_autogen/UVLADIE3JM/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_plotwidget.cpp  moc_plotwidget.cpp.d
build - Copy/met_numeryczne_autogen/include/: ui_mainwindow.h
data/: diode_data.csv  diode_iv_-5_to_1V_2000pts.csv
src/: fitting.cpp  fitting.h  mainwindow.cpp  mainwindow.h  plotwidget.cpp  plotwidget.h
ui/: mainwindow.ui
